Linux Mint added to download page including warning.

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -146,6 +146,16 @@
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
+          27px; height: 24px;" alt="Linux Mint logo"
+          src="https://manns.github.io/pyspread/images/linux-mint-logo-small.png"
+          align="middle"></td>
+      <td style="text-align: left;">Linux Mint</td>
+      <td><a
+          href="https://community.linuxmint.com/software/view/pyspread">pyspread v1.0.1</a>
+          <i>Please do not use v1.0.1 that has a critical file saving bug.</i></td>
+    </tr>
+    <tr>
+      <td style="text-align: center;"><img style=" width:
           23px; height: 24px;" alt="Mageia logo"
           src="https://manns.github.io/pyspread/images/mageia-logo-small.png"
           align="middle"></td>
