--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -146,6 +146,15 @@
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
+          24px; height: 24px;" alt="Fedora logo"
+          src="https://manns.github.io/pyspread/images/fedora-logo-small.png"
+          align="middle"></td>
+      <td style="text-align: left;">Fedora</td>
+      <td><a
+          href="https://fedora.pkgs.org/24/rpm-sphere/pyspread-1.0.3-6.1.noarch.rpm.html">pyspread v1.0.3</a></td>
+    </tr>
+    <tr>
+      <td style="text-align: center;"><img style=" width:
           27px; height: 24px;" alt="Linux Mint logo"
           src="https://manns.github.io/pyspread/images/linux-mint-logo-small.png"
           align="middle"></td>
@@ -255,5 +264,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 29. February 2017</span>
+  Last changed: 14. April 2017</span>
 </p>
