Links to GNA site removed. Windows binary release now points to github.

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -11,10 +11,8 @@
 </p>
 
 <p class="one_line_heading">
-  For bug reports, please follow the link in the menu to the pyspread issue
-  tracker on github.
-  For anything else please send an e-mail to
-  <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
+  For bug reports, please follow the link in the menu to the <a href="https://github.com/manns/pyspread/issues">pyspread issue tracker</a> on github.
+  For anything else please send an e-mail to the author (see bottom of page).
 </p>
 
 
@@ -229,17 +227,11 @@ Chart overview:
   <li>Issue a pull request when ready.</li>
 </ol>
 
-<p class="one_line_heading">
-  or send your patch to
-  <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>
-</p>
-
-
 <p class="impressum">
   Author:
   <a href="mailto:mmanns <at> gmx <dot> net">
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 10. November 2016</span>
+  Last changed: 18. June 2017</span>
 </p>
