--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -206,8 +206,8 @@
 
 <p class="one_line_heading">
   Starting from version 1.0, a Windows 32 bit installer is available (Windows XP or later).
-  The latest version can be downloaded <a href="http://download.gna.org/pyspread/pyspread-1.0.2-win32-setup.exe">here</a> 
-  (120MB download, <a href="http://download.gna.org/pyspread/pyspread-1.0.2-win32-setup.exe.sig">gpg sig</a>).
+  The latest version can be downloaded <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe">here</a> 
+  (120MB download, <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe.sig">gpg sig</a>).
 
 <h2>Manual installation</h2>
 
