--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1700,7 +1700,7 @@
     histograms, box plots, pie charts and annotations. Note
     that pie charts cannot be combined with other chart type
     yet. Please suggest other chart types that you find usable
-    by posting at <a href="mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>.
+    by posting at the <a href="https://github.com/manns/pyspread/issues">pyspread issue tracker</a>.
 </p>
 <p class="one_line_heading">
     <a href="images/screenshot_chartdialog.png">
@@ -1774,8 +1774,7 @@
     Sankey. Note that the series type names correspond to the respective
     matplotlib names. Other types of matplotlib series are not supported in
     the chart dialog. If such a need arises please post an e-mail to the
-    mailing list <a href="mailto:pyspread-users@gna.org">
-    pyspread-users@gna.org</a>.
+    <a href="https://github.com/manns/pyspread/issues">pyspread issue tracker</a>.
 </p>
 <p class="one_line_heading">
     <i>Plot chart</i>
@@ -2709,5 +2708,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 27. December 2016</span>
+  Last changed: 18. June 2017</span>
 </p>
