--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -116,17 +116,11 @@
 
 <p class="one_line_heading">
   For user questions or user feedback please post to the pyspread-users mailing
-  list by sending an e-mail to
-  <a href="mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>.
-  You can subscribe to the list
-  <a href="https://mail.gna.org/listinfo/pyspread-users/">here</a>.
+  list by sending an e-mail to the author (see below).
 </p>
 <p class="one_line_heading">
-  For contributions, patches, development discussions and ideas please post to
-  the pyspread-dev mailing list by sending an e-mail to
-  <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
-  You can subscribe to the list <a
-  href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>.
+  For contributions, patches, development discussions and ideas please create an issue using the 
+  <a href="https://github.com/manns/pyspread/issues">pyspread issue tracker</a>.
 </p>
 
 <p class="impressum">
@@ -135,5 +129,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 8. January 2017</span>
+  Last changed: 18. June 2017</span>
 </p>
