Broken links fixed

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -21,10 +21,10 @@
 <p class="one_line_heading">
 
   Pyspread is localized via the
-  <a href="http://translationproject.org">Translation project</a>, i.e.
+  <a href="https://translationproject.org">Translation project</a>, i.e.
   the textual content of the user interface is translated into different
   languages. If you like to localize pyspread, please refer to the
-  <a href="http://translationproject.org/domain/pyspread.html">translators' page</a>
+  <a href="https://translationproject.org/domain/pyspread.html">translators' page</a>
   for detailed instructions.
 </p>
 
@@ -221,7 +221,7 @@ Chart overview:
 <ol class="one_line_heading">
   <li>Get a github account.</li>
   <li>Fork the branch that you would like to work with (see
-    <a href="http://help.github.com/fork-a-repo/"
+    <a href="https://help.github.com/fork-a-repo/"
       target="_blank">github help</a>).<br>
   </li>
   <li>Issue a pull request when ready.</li>
