--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -38,7 +38,7 @@
 </p>
 
 <ul class="one_line_heading">
-  <li> <a href="http://www.python.org/">Python</a>
+  <li> <a href="https://www.python.org/">Python</a>
     (&gt;=2.7, &lt;3.0) </li>
   <li> <a href="http://www.numpy.org/">numpy</a>
     (&gt;=1.1.0) </li>
@@ -46,7 +46,7 @@
     (&gt;=2.8.10.1, Unicode version required) </li>
   <li> <a href="http://matplotlib.org/">matplotlib</a>
     (&gt;=1.1.1)</li>
-  <li> <a href="http://cairographics.org/pycairo/">pycairo</a>
+  <li> <a href="https://cairographics.org/pycairo/">pycairo</a>
     (&gt;=1.8.8)</li>
 </ul>
 
@@ -62,7 +62,7 @@
     (&gt;=0.9.2, for loading Excel files)</li>
   <li><a href="http://www.python-excel.org/">xlwt</a>
     (&gt;=0.9.2, for saving Excel files)</li>
-  <li><a href="http://jedi.jedidjah.ch">jedi</a>
+  <li><a href="https://pypi.python.org/pypi/jedi">jedi</a>
     (&gt;=0.8.0, for tab completion and context help in the
     entry line)</li>
   <li> <a href="http://cairographics.org/download/">pyrsvg</a>
@@ -230,7 +230,7 @@
       <br>
     </li>
     <li>Download and install gnupg (<a
-        href="http://www.gpg4win.org/">Gpg4win</a> supports
+        href="https://www.gpg4win.org/">Gpg4win</a> supports
       32&amp;64bit)<br>
       <br>
     </li>
