Bugfix on contributions page

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -55,7 +55,7 @@
 
 <p class="one_line_heading">
   No translations of the user documentation (e.g. the 
-  <a href src="https://manns.github.io/pyspread/first_steps.html">First steps document</a>
+  <a href="https://manns.github.io/pyspread/first_steps.html">First steps document</a>
   ) are available, yet.
 </p>
 
