--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -186,7 +186,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="http://packages.ubuntu.com/yakkety/pyspread">pyspread v1.0.3</a></td>
+          href="https://packages.ubuntu.com/artful/pyspread">pyspread v1.1</a></td>
     </tr>
   </tbody>
 </table>
@@ -264,5 +264,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 14. April 2017</span>
+  Last changed: 28. July 2017</span>
 </p>
