--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -24,7 +24,7 @@
 <h1>About</h1>
 
 <p class="one_line_heading">
-  Pyspread is a non-traditional spreadsheet application that is based on and
+  Pyspread is a non-traditional spreadsheet that is based on and
   written in the programming language
   <a href="http://www.python.org/">Python</a>.
 </p>
