More detailled Windows insatllation instructions

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -205,10 +205,21 @@
 <h2>Installer</h2>
 
 <p class="one_line_heading">
-  Starting from version 1.0, a Windows 32 bit installer is available (Windows XP or later).
-  The latest version can be downloaded <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe">here</a> 
-  (120MB download, <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe.sig">gpg sig</a>).
-
+  Starting from version 1.0, a Windows 32 bit installer is available (Windows XP or later):
+  <ol class="one_line_heading">
+    <li>Download and install gnupg (<a
+        href="https://www.gpg4win.org/">Gpg4win</a> supports
+      32&amp;64bit)<br>
+      <br>
+    </li>
+    <li>
+      Downloaded the <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe">pyspread installer</a> 
+      (120MB download, <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe.sig">gpg sig</a>).
+    </li>
+    <li>
+      Run the Setup file.
+    </li>    
+  </ol>
 <h2>Manual installation</h2>
 
 <p class="one_line_heading">
