--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -213,11 +213,13 @@
       <br>
     </li>
     <li>
-      Downloaded the <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe">pyspread installer</a> 
+      Download the <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe">pyspread installer</a> 
       (120MB download, <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe.sig">gpg sig</a>).
+      <br>
     </li>
     <li>
       Run the Setup file.
+      <br>
     </li>    
   </ol>
 <h2>Manual installation</h2>
