Windows setup v. 1.1.1 added

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -209,12 +209,12 @@
   <ol class="one_line_heading">
     <li>Download and install gnupg (<a
         href="https://www.gpg4win.org/">Gpg4win</a> supports
-      32&amp;64bit)<br>
+      32&amp;64bit). Note that version 2.2.6 works and version 3.x does not. If you encounter issues please downgrade to 2.2.6.<br>
       <br>
     </li>
     <li>
-      Download the <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe">pyspread installer</a> 
-      (120MB download, <a href="https://github.com/manns/pyspread/releases/download/v1.0.2/pyspread-1.0.2-win32-setup.exe.sig">gpg sig</a>).
+      Download the <a href="https://github.com/manns/pyspread/releases/download/v1.1.1/setup_pyspread_1.1.1.exe">pyspread installer</a> 
+      (120MB download, <a href="https://github.com/manns/pyspread/releases/download/v1.1.1/setup_pyspread_1.1.1.exe.sig">gpg sig</a>).
       <br>
       <br>
     </li>
@@ -279,5 +279,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 01. November 2017</span>
+  Last changed: 13. November 2017</span>
 </p>
