Windows installer note

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -205,7 +205,9 @@
 <h2>Installer</h2>
 
 <p class="one_line_heading">
-  Starting from version 1.0, a Windows 32 bit installer is available (Windows XP or later):
+  Starting from version 1.0, a Windows 32 bit installer is available (Windows XP or later).
+  Note that the installer does not comprise all libraries that are used in the examples,
+  i.e. maps and videos in the grid will not work out of the box.
   <ol class="one_line_heading">
     <li>Download and install gnupg (<a
         href="https://www.gpg4win.org/">Gpg4win</a> supports
@@ -214,7 +216,7 @@
     </li>
     <li>
       Download the <a href="https://github.com/manns/pyspread/releases/download/v1.1.1/setup_pyspread_1.1.1.exe">pyspread installer</a> 
-      (120MB download, <a href="https://github.com/manns/pyspread/releases/download/v1.1.1/setup_pyspread_1.1.1.exe.sig">gpg sig</a>).
+      (32MB download, <a href="https://github.com/manns/pyspread/releases/download/v1.1.1/setup_pyspread_1.1.1.exe.sig">gpg sig</a>).
       <br>
       <br>
     </li>
