--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -132,7 +132,7 @@
       </td>
       <td style="text-align: left;">Arch</td>
       <td><a
-          href="https://aur.archlinux.org/packages/pyspread/">pyspread v1.0.3</a><br>
+          href="https://aur.archlinux.org/packages/pyspread/">pyspread v1.1.1</a><br>
       </td>
     </tr>
     <tr>
@@ -170,6 +170,14 @@
           align="middle"></td>
       <td style=" text-align: left;">Mageia</td>
       <td><a href="https://madb.mageia.org/package/show/name/pyspread/release/cauldron">pyspread v1.1</a></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top; text-align: center;"><img
+          style=" width: 24px; height: 24px;" alt="NixOS logo" src="https://manns.github.io/pyspread/images/nixos-hex.png"
+          align="middle"></td>
+      <td style="vertical-align: top;">NixOS</td>
+      <td style="vertical-align: top;"><a
+          href="https://nixos.org/nixos/packages.html#pyspread">pyspread v1.1</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -281,5 +289,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 13. November 2017</span>
+  Last changed: 22. December 2017</span>
 </p>
