Download page updated

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -142,7 +142,7 @@
           align="middle"></td>
       <td style="text-align: left;">Debian</td>
       <td><a
-          href="https://packages.debian.org/de/sid/pyspread">pyspread v1.1</a></td>
+          href="https://packages.debian.org/de/sid/pyspread">pyspread v1.1.1</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -194,7 +194,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="https://packages.ubuntu.com/artful/pyspread">pyspread v1.1</a></td>
+          href="https://packages.ubuntu.com/bionic/pyspread">pyspread v1.1.1</a></td>
     </tr>
   </tbody>
 </table>
@@ -289,5 +289,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 18. January 2017</span>
+  Last changed: 03. April 2018</span>
 </p>
