--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -247,7 +247,7 @@
       If WinPython is used then the WinPython control panel is recommended for all installations.<br> <br>
     </li>
     <li>Download and install Cairo and pycairo. Working binaries are available <a
-        href="http://www.lfd.uci.edu/%7Egohlke/pythonlibs/">here</a>. Note that Cairo has to be installed by maunually copying it. Make sure to read the installation instructions.<br>
+        href="http://www.lfd.uci.edu/%7Egohlke/pythonlibs/">here</a>. Note that Cairo has to be installed by manually copying it. Make sure to read the installation instructions.<br>
       <br>
     </li>
     <li>Download and install <a
