Download section updated to v1.1.2

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -83,8 +83,8 @@
 
   These instructions are for installing the source tarball
   <br>
-  <a href="https://pypi.python.org/packages/4a/19/0447639d5bbf272b7d388a2ce9374d7f552966b90b66e108e8d7850b3628/pyspread-1.1.1.tar.gz#md5=021921de5a49b9ab98ec845ee215b50b">pyspread v1.1.1</a>
-  (<a href="https://pypi.python.org/packages/4a/19/0447639d5bbf272b7d388a2ce9374d7f552966b90b66e108e8d7850b3628/pyspread-1.1.1.tar.gz.asc">gpg sig</a>).
+  <a href="https://files.pythonhosted.org/packages/24/67/e3e0a218fb051b599ef024419f277522404c1a9c7ff30c3bd65139f4ee11/pyspread-1.1.2.tar.gz#sha256=ffdfd219450f5f22ee51eb633c04941d1d608e1ceb4d3357d07683b7e5b84f83">pyspread v1.1.2</a>
+  (<a href="https://pypi.io/packages/source/p/pyspread/pyspread-1.1.2.tar.gz.asc">gpg sig</a>).
   <br> <br>
   Installation:
   <br>
@@ -289,5 +289,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 03. April 2018</span>
+  Last changed: 11. June 2018</span>
 </p>
