--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -83,8 +83,8 @@
 
   These instructions are for installing the source tarball
   <br>
-  <a href="https://files.pythonhosted.org/packages/24/67/e3e0a218fb051b599ef024419f277522404c1a9c7ff30c3bd65139f4ee11/pyspread-1.1.2.tar.gz#sha256=ffdfd219450f5f22ee51eb633c04941d1d608e1ceb4d3357d07683b7e5b84f83">pyspread v1.1.2</a>
-  (<a href="https://pypi.io/packages/source/p/pyspread/pyspread-1.1.2.tar.gz.asc">gpg sig</a>).
+  <a href="https://files.pythonhosted.org/packages/4b/34/3ce362d78584274da5c418c9712d3cc53b9e19e7d8f22a141baa2a9da6b9/pyspread-1.1.3.tar.gz#sha256=6e5d0eb49750eed7734852e15727e190270880c75dcc5f6c8fb1bfdaa59c48fc">pyspread v1.1.3</a>
+  (<a href="https://pypi.io/packages/source/p/pyspread/pyspread-1.1.3.tar.gz.asc">gpg sig</a>).
   <br> <br>
   Installation:
   <br>
@@ -194,7 +194,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="https://packages.ubuntu.com/bionic/pyspread">pyspread v1.1.1</a></td>
+          href="https://packages.ubuntu.com/disco/pyspread">pyspread v1.1.1</a></td>
     </tr>
   </tbody>
 </table>
@@ -289,5 +289,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 18. November 2018</span>
+  Last changed: 08. February 2019</span>
 </p>
